--- a/problem_sets/assignment_4_ONEIL.qmd
+++ b/problem_sets/assignment_4_ONEIL.qmd
@@ -127,24 +127,35 @@ economist |>
 economist |> 
   select(HDI, Region) |> 
   ggplot()+
-  geom_histogram(mapping = aes(x = ))
+  geom_histogram(mapping = aes(x = HDI, fill = Region))+
+  facet_wrap(~Region)
 ```
 
 #### 1.11 Show the distribution of `HDI` in each region using a box plot. Set the transparency of these boxes to 0.5 and do not show outlier points with the box plot. Instead, show all data points for each country in the same plot (Hint: `geom_jitter()` or `position_jitter()` might be useful.)
 
 ```{r}
-## Write your code here
+economist |> 
+  ggplot(data, aes(x = Region, y = HDI, fill = Region)) +
+  geom_boxplot(alpha = 0.5, outlier.shape = NA) +  
+  geom_jitter(aes(color = Region), width = 0.2, height = 0, size = 2) + 
+  theme_minimal() +
+  theme(legend.position = "right")
+
 ```
 
 #### 1.12 Show the count of countries in each region using a bar plot.
 
 ```{r}
-## Write your code here
+economist |> 
+  select(Region, Country) |>
+  group_by(Country) |> 
+  ggplot()+
+  geom_bar(mapping = aes(x = Region))
 ```
 
 #### 1.13 You have now created a variety of different plots of the same dataset. Which of your plots do you think are the most informative? Describe briefly the major trends that you see in the data.
 
-Answer: *Write your response here.*
+Answer: The data shows that countries that have a higher HDI in most cases have a higher CPI, which in this case is good, as a higher CPI means the less corrupted the country is perceived to be. Western Europe seems to have the highest HDI according to the data, with Sub-Saharan Africa having the lowest HDI.
 
 ## Exercise 2. Theophylline experiment
 
@@ -153,7 +164,7 @@ This exercise uses the `Theoph` data frame (comes with your R installation), whi
 Have a look at the data structure
 
 ```{r}
-## Write your code here
+kable(head(Theoph))
 ```
 
 For the following exercise, **transform the data as instructed.** Try to use `tidyverse` function even if you are more comfortable with base-R solutions. Show the **first 6 lines** of the transformed data in a table through RMArkdown **using the kable() function**, as shown above.
@@ -161,31 +172,59 @@ For the following exercise, **transform the data as instructed.** Try to use `ti
 #### 2.1 Select columns that contain a lower case "t" in the `Theoph` dataset. Do not manually list all the columns to include.
 
 ```{r}
-## Write your code here
+Theoph |> 
+  select(Wt) |> 
+  head()
 ```
 
 #### 2.2 Rename the `Wt` column to `Weight` and `conc` column to `Concentration` in the `Theoph` dataset.
 
 ```{r}
-## Write your code here
+Theoph |> 
+  select( Subject, Wt, Dose, Time,conc) |> 
+  rename("Weight" = Wt) |> 
+  rename("Concentration" = conc) |> 
+  head()
 ```
 
 #### 2.3 Extract the `Dose` greater than 4.5 and `Time` greater than the mean `Time`.
 
 ```{r}
-## Write your code here
+
+Theoph |> 
+  filter(Dose > 4.5) |> 
+  filter(Time > mean(Time)) |> 
+  head()
+  
+  
+  
+  
+  
+  
+  
 ```
 
 #### 2.4 Sort the `Theoph` dataset by `Wt` from smallest to largest and secondarily by Time from largest to smallest.
 
 ```{r}
-## Write your code here
+Theoph |> 
+  select(Wt, Dose, Time, conc) |> 
+  arrange(desc(Time)) |> 
+  arrange(Wt) |> 
+  head()
 ```
 
 #### 2.5 Create a new column called `Quanity` that equal to `Wt` x `Dose` in the `Theoph` dataset. This will tell you the absolute quantity of drug administered to the subject (in mg). Replace the `Dose` variable with `Quanity`.
 
 ```{r}
-## Write your code here
+Theoph |>
+  select(Wt, Dose, Time, conc) |> 
+  mutate(Quantiy = Wt*Dose) |> 
+  mutate(Dose = NULL) |> 
+  select(Wt,Quantiy,Time, conc)|> 
+  head()
+  
+  
 ```
 
 #### 2.6 Find the mean `conc` and sum of the `Dose` received by each test subject.
@@ -193,7 +232,14 @@ For the following exercise, **transform the data as instructed.** Try to use `ti
 Show data for 6 subjects with the smallest sum of `Dose` as below. **Do not define new intermediate objects for this exercise; use pipes to chain together functions.**
 
 ```{r}
-## Write your code here
+  Theoph |> 
+  group_by(Subject) %>%
+  summarise(
+    mean_conc = mean(conc, na.rm = TRUE),
+    sum_dose = sum(Dose, na.rm = TRUE)
+  ) %>%
+  arrange(sum_dose) %>%
+  slice_head(n = 6)
 ```
 
 ## Exercise 3. Unemployment in the US 1967-2015 (OPTIONAL)
