commit to github

--- a/problem_sets/assignment_6_ONEIL.qmd
+++ b/problem_sets/assignment_6_ONEIL.qmd
@@ -9,7 +9,7 @@ format: gfm
 #| message: false
 library(tidyverse)
 library(knitr)
-#install.packages("knitr")
+library(lubridate)
 ```
 
 ## Exercise 1. Tibble and Data Import
@@ -52,6 +52,7 @@ tibble(fruit)
 #### 1.3 Import `https://raw.githubusercontent.com/nt246/NTRES-6100-data-science/master/datasets/dataset3.txt` into R. Watch out for the first few lines, missing values, separators, quotation marks, and deliminaters.
 
 ```{r}
+#| message: false 
 fruit_1.3 <-read_delim("https://raw.githubusercontent.com/nt246/NTRES-6100-data-science/master/datasets/dataset3.txt", quote ="/", skip = 2, na = c("Not Available", "?"))
  tibble(fruit_1.3)
 ```
@@ -97,8 +98,7 @@ blank indicates no data
 *Hints: you don’t have to perform these tasks in the given order; also, warning messages are not necessarily signs of trouble.*
 
 ```{r}
-weather_2.2 <- read.csv("https://raw.githubusercontent.com/nt246/NTRES-6100-data-science/master/datasets/2015y_Weather_Station.csv", colClasses = c("character"))
-view(weather_2.2)
+weather_2.2 <- read.csv("https://raw.githubusercontent.com/nt246/NTRES-6100-data-science/master/datasets/2015y_Weather_Station.csv")
 ```
 
 Before cleaning:
@@ -112,19 +112,75 @@ tibble(weather_2.2[1:6, 1:10])
 After cleaning:
 
 ```{r}
-weather_2.2_tidy_long <- weather_2.2 |> 
-  pivot_longer(cols = -c(date, station, item), names_to = "hour", values_to = "value" )
- 
-weather_2.2_tidy_long |> 
-  mutate(date = ymd(date), hour = as.numeric(hour), hour= sprintf("%02d:00",hour %% 24), value = ifelse(value == "NR", "0", value))
+#| warning: false
+weather_raw <- read_csv("https://raw.githubusercontent.com/nt246/NTRES-6100-data-science/master/datasets/2015y_Weather_Station.csv", col_names = (TRUE), guess_max = Inf)
 
-weather_2.2_tidy_long |> 
-  pivot_wider(names_from = item, values_from = value) |> 
-  tibble() |> 
-  head()
-  
-  
+
+weather_clean <- weather_raw |>
+  pivot_longer(cols = c("00":"23"), names_to = "hour", values_to = "value") |>
+  pivot_wider(names_from = item, values_from = value) |>
+  mutate(date = as.Date(date), across(AMB_TEMP:PM10, as.numeric), hour = hms::as_hms(paste0(hour, ":00:00")))
+
+
+weather_clean <- weather_clean |>
+  mutate(RAINFALL = ifelse(RAINFALL == "NR", 0, RAINFALL)) |>
+  mutate(across(AMB_TEMP:PM10, ~na_if(.x, -99.99))) |>
+  mutate(across(AMB_TEMP:PM10, as.numeric))
+
+tibble(weather_clean[1:6, 1:10])
 
 ```
 
 #### 2.3 Using this cleaned dataset, plot the daily variation in ambient temperature on September 25, 2015, as shown below.
+
+```{r}
+weather_clean |>
+  filter(date == "2015/09/15") |>
+  ggplot()+
+  geom_line(aes(x = hour, y = AMB_TEMP, group = station))
+```
+
+#### 2.4 Plot the daily average ambient temperature throughout the year with a **continuous line**, as shown below.
+
+```{r}
+weather_clean |> 
+  group_by(date) |> 
+  summarise(daily_avg_temp = mean(AMB_TEMP, na.rm = TRUE)) |> 
+  ggplot(aes(x = date, y = daily_avg_temp)) +
+  geom_line()
+```
+
+#### 2.5 Plot the total rainfall per month in a bar chart, as shown below.
+
+*Hint: separating date into three columns might be helpful.*
+
+```{r}
+#| warning: false
+weather_clean <- weather_clean |>
+  mutate(month = month(date), year = year(date))
+
+
+weather_clean |> 
+  group_by(month) |> 
+  mutate(RAINFALL = as.numeric(RAINFALL)) |> 
+  summarise(total_rainfall = sum(RAINFALL, na.rm = TRUE)) |> 
+  ggplot(aes(x = month, y = total_rainfall)) +
+  geom_bar(stat = "identity", fill = "black")
+```
+
+#### 2.6 Plot the per hour variation in PM2.5 in the first week of September with a **continuous line**, as shown below.
+
+*Hint: uniting the date and hour and parsing the new variable might be helpful*
+
+```{r}
+#| warning: false
+weather_clean$month <- as.character(weather_clean$month)
+weather_clean |> 
+  mutate(PM2.5 = as.numeric(PM2.5)) |> 
+  mutate(day = day(date), month = month(date), year = year(date)) |> 
+  mutate(datetime = as.POSIXct(paste(date, hour), format="%Y-%m-%d %H:%M:%S")) |> 
+  filter(month == 9) |> 
+  filter(between(day, 1, 7)) |> 
+  ggplot()+
+  geom_line(aes(x = datetime, y = PM2.5))
+```
